Fix spacing between map and header, add notes file for erebus people

--- a/media/css/main3.css
+++ b/media/css/main3.css
@@ -83,7 +83,7 @@ table.expeditionpersonlist a:hover
 div#content
 {
 	position:absolute;
-	top:63px;
+	top:60px;
 	bottom:0px;
 	left:0px;
 	right:0px;
